--- a/.chezmoitemplates/vscode/settings.json
+++ b/.chezmoitemplates/vscode/settings.json
@@ -1,159 +1,3 @@
 {
-    // common
-    "extensions.ignoreRecommendations": true,
-    "security.workspace.trust.untrustedFiles": "open",
-    "chat.commandCenter.enabled": false,
-    "window.menuBarVisibility": "compact",
-    // shell
-    "terminal.integrated.profiles.windows": {
-        "Bash": {
-            "path": [
-                // windows
-                "D:\\scoop\\apps\\git\\current\\bin\\bash.exe"
-            ]
-        }
-    },
-    "terminal.integrated.defaultProfile.windows": "Bash",
-    "terminal.integrated.profiles.osx": {
-        "bash": {
-            "path": "bash",
-            "args": [
-                "-l"
-            ],
-            "icon": "terminal-bash"
-        },
-        "zsh": {
-            "path": "zsh",
-            "args": [
-                "-l"
-            ]
-        }
-    },
-    "terminal.integrated.defaultProfile.osx": "zsh",
-    // theme
-    "workbench.colorTheme": "Palenight (Mild Contrast)",
-    "window.newWindowProfile": "默认",
-    "workbench.iconTheme": "material-icon-theme",
-    "workbench.productIconTheme": "bongocat",
-    "workbench.editor.showTabs": "multiple",
-    "window.zoomLevel": 1.5,
-    "editor.fontFamily": "'Maple Mono NF CN', 'FiraCode Nerd Font Mono', Consolas, 'Courier New', monospace",
-    // Enable OpenType features
-    "editor.fontLigatures": "'calt', 'cv35', 'ss01', 'ss03', 'ss04'",
-    "editor.fontSize": 14,
-    // vim
-    "vim.leader": "<space>",
-    "editor.lineNumbers": "relative",
-    "vim.surround": true,
-    "vim.sneak": true,
-    "vim.useSystemClipboard": true,
-    "vim.hlsearch": true,
-    "vim.ignorecase": true,
-    "vim.useCtrlKeys": true,
-    "vim.handleKeys": {
-        "<C-c>": false,
-        "<C-v>": false,
-        "<C-f>": false
-    },
-    "vim.normalModeKeyBindingsNonRecursive": [
-        // 搜索
-        {
-            "before": [
-                "/"
-            ],
-            "commands": [
-                "actions.find"
-            ]
-        },
-        {
-            "before": [
-                "?"
-            ],
-            "commands": [
-                "editor.action.startFindReplaceAction"
-            ]
-        },
-        // 显示文档
-        {
-            "before": [
-                "K"
-            ],
-            "commands": [
-                "editor.action.showHover"
-            ]
-        },
-        // 转到定义
-        {
-            "before": [
-                "L"
-            ],
-            "commands": [
-                "editor.action.revealDefinition"
-            ]
-        },
-        // 转到引用
-        {
-            "before": [
-                "H"
-            ],
-            "commands": [
-                "editor.action.goToReferences"
-            ]
-        },
-        // undo/redo
-        {
-            "before": [
-                "u"
-            ],
-            "commands": [
-                "undo"
-            ]
-        },
-        {
-            "before": [
-                "<C-r>"
-            ],
-            "commands": [
-                "redo"
-            ]
-        },
-        // 显示下一个文件
-        {
-            "before": [
-                "<TAB>"
-            ],
-            "commands": [
-                ":bn"
-            ]
-        },
-        // 显示上一个文件
-        {
-            "before": [
-                "<S-TAB>"
-            ],
-            "commands": [
-                ":bp"
-            ]
-        },
-        // whichkey
-        {
-            "before": [
-                "<leader>"
-            ],
-            "commands": [
-                "whichkey.show"
-            ]
-        }
-    ],
-    "vim.visualModeKeyBindingsNonRecursive": [
-        // whichkey
-        {
-            "before": [
-                "<leader>"
-            ],
-            "commands": [
-                "whichkey.show"
-            ]
-        }
-    ]
+{{ template "vscode/settings-common" . }}
 }
