feat: enhance nushell config, add rust to mise, update docs
- .chezmoiignore: add _tmp to ignore list

- nushell/config.nu: add vi mode, fuzzy completions, rounded table, hide banner

- mise/config.toml: add rust toolchain

- CODEBUDDY.md: update project documentation with detailed architecture

- Add .codebuddy rules and .gitignore

--- a/dot_config/mise/config.toml
+++ b/dot_config/mise/config.toml
@@ -4,6 +4,7 @@ neovim = "latest"
 ripgrep = "latest"
 # language
 go = "latest"
+rust = "latest"
 python = "latest"
 # language management
 uv = "latest"
