feat: add CodeBuddy CN config for macOS and set Nu as default terminal

--- a/.chezmoiignore
+++ b/.chezmoiignore
@@ -12,6 +12,8 @@ README.md
 {{ if ne .chezmoi.os "darwin"}}
 Library/Application Support/Code/User/settings.json
 Library/Application Support/Code/User/keybindings.json
+Library/Application Support/CodeBuddy CN/User/settings.json
+Library/Application Support/CodeBuddy CN/User/keybindings.json
 {{ end }}
 {{ if ne .chezmoi.os "windows"}}
 AppData/Roaming/Code/User/settings.json
