--- a/dot_config/opencode/package.json
+++ b/dot_config/opencode/package.json
@@ -1,6 +1,5 @@
 {
   "dependencies": {
-    "@opencode-ai/plugin": "1.2.6",
-    "better-sqlite3": "^11.0.0"
+    "@opencode-ai/plugin": "1.2.6"
   }
 }
